# open-gl-renderer

./: CMakeLists.txt  README.md
headers/: Camera.h  EBO.h  Mesh.h  Texture.h  VBO.h
resources/: default.frag  default.vert
src/: Camera.cpp  EBO.cpp  Texture.cpp  VBO.cpp  main.cpp
